tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_89.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((+ (- (z * y))) + (((x DIV 0) - (2 * 0)) + ((1 * x) MOD (+ 1))));
               p := ((+ ((0 DIV z) + (200 DIV 200))) = (+ ((- 200) * (- 1223))));
  (* error *)  y := ((+ ((q + x) - (+ 200))) + (((y - z) MOD (+ 1)) + ((0 DIV y) MOD (- 0))));
               y := ((((1223 * x) MOD (1223 MOD 200)) DIV ((y + 2) - (+ 1))) - (+ ((1 DIV 2) DIV (0 * 200))));
               x := ((((- 1) MOD (1223 * 1223)) * (+ (2 - 1223))) + (((2 MOD 2) - (+ x)) - ((- x) DIV (- 2))));
               q := (~ (((r OR r) OR (q OR q)) & ((q & p) OR (y < y))));
               x := ((((2 + 1) MOD (+ 1)) - ((- 1223) MOD (1223 MOD z))) MOD ((- (1223 DIV x)) - ((+ 2) + (200 DIV z))));
               y := ((+ ((0 DIV 200) DIV (z DIV 2))) MOD (- (+ (y + x))));
               y := (((+ (200 * y)) MOD ((1223 - 1223) * (2 DIV 200))) + ((+ (+ 0)) * ((- 0) - (1 + 1))));
               q := ((((+ 2) MOD (1223 + x)) + ((2 + 200) DIV (x - 2))) <= (((1223 * 2) + (200 * 1223)) DIV (+ (- z))))
END Test13.